# AU

./: .gitignore  Attendance_April_2026.xlsx  Auinfocity Shift Details (1).xlsx  README.md  attendance_report.py  build_installer.bat  build_nuitka.bat  build_nuitka.sh  installer.iss  login_ui.py  pyproject.toml  requirements.txt  run_cli.py  run_gui.py
.claude/: settings.local.json
.github/workflows/: build-windows-exe.yml
src/forefold_attendance/: __init__.py  cli.py  engine.py
src/forefold_attendance_gui/: branding.py  constants.py  imports_store.py  main.py  style.py
src/forefold_attendance_gui/api/: client.py  worker.py
src/forefold_attendance_gui/dashboard/: window.py
src/forefold_attendance_gui/dashboard/employees/: model.py  tab.py
src/forefold_attendance_gui/dashboard/imports/: tab.py
src/forefold_attendance_gui/dashboard/reports/: dialogs.py  tab.py  worker.py
src/forefold_attendance_gui/weekoff/: __init__.py  store.py  tab.py
