[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forefold-attendance"
version = "1.0.0"
description = "BioTime attendance and OT report generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28.0",
  "openpyxl>=3.1.0",
  "PySide6>=6.7.0",
]

[project.optional-dependencies]
build = ["nuitka>=2.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
